--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "appicdao",
+  "name": "landing-v2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,9 +11,10 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "keen-slider": "^6.8.6",
-    "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "next": "^15.2.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
